Bug 162746 - Cannot open DOCX file from 24.8
Summary: Cannot open DOCX file from 24.8
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: high normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-09-02 12:33 UTC by Timur
Modified: 2024-09-06 08:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
DOCX (46.74 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-09-02 12:33 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2024-09-02 12:33:08 UTC
Created attachment 196179 [details]
DOCX

While testing saving DOCX, this bug came out: cannot open LO-saved DOCX.

This started with the following commit:
https://git.libreoffice.org/core/commit/7e9c23894bd45e015accf26ae0a77035b7eed452

Author:     Mike Kaganski <mike.kaganski@collabora.com>
AuthorDate: Sun Jun 2 15:53:38 2024 +0500
Commit:     Mike Kaganski <mike.kaganski@collabora.com>
CommitDate: Sun Jun 2 19:18:27 2024 +0200

    tdf#161368: use SwTwips for twip sizes, instead of sal_uInt16

https://bugs.documentfoundation.org/show_bug.cgi?id=161368
Comment 1 Julien Nabet 2024-09-02 12:45:50 UTC
On pc Debian x86-64 with master sources updated today, I confirm I got an hang when opening the docx file.
Comment 2 Mike Kaganski 2024-09-03 08:58:30 UTC
https://gerrit.libreoffice.org/c/core/+/172789
Comment 3 Commit Notification 2024-09-03 15:28:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/74533c1f1d5e8e48a65d33bef236f1382d32aa06

tdf#162746: sanitize width in SwTextFormatter::FeedInf

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-09-04 08:50:18 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/bb016228172c01b531f36d8bbba3db01605c8053

tdf#162746: sanitize width in SwTextFormatter::FeedInf

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-09-06 08:29:46 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/8f5cc57358c0e1819d506632f881737f248ac594

tdf#162746: sanitize width in SwTextFormatter::FeedInf

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.