tdf#162746: sanitize width in SwTextFormatter::FeedInf

Since commit 7e9c23894bd45e015accf26ae0a77035b7eed452 (tdf#161368:
use SwTwips for twip sizes, instead of sal_uInt16), the result of
rInf.Right() - GetLeftMargin() is not cast to an unsigned type,
so may happen to be a negative value. Make sure it's not negative;
this doesn't fix the layout of this document (it still opens with
table having wrong width, as before the mentioned commit), just
avoids the infinite layout loop.

Change-Id: I4930c8718d5fd09064ae0febd9b5adbdb0e2cd5e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172789
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>