sw/qa/extras/ooxmlexport/ooxmlexport21.cxx
@@ -1177,6 +1177,12 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf61309)
     CPPUNIT_ASSERT_EQUAL(1, getPages());
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf162746)
+{
+    // Without the fix in place this hangs (and eventually OOMs) on opening
+    loadAndSave("tdf162746.docx");
+}
+
 } // end of anonymous namespace
 CPPUNIT_PLUGIN_IMPLEMENT();
 
